--- a/Adaboost.ipynb
+++ b/Adaboost.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### By Athar Pasha, Umair Cheema"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Adaboost Algorithm"
    ]
   },
@@ -347,6 +354,13 @@
    ],
    "source": [
     "sentiment_test([\"This is bad\"],model,vectorizer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The sentiment above is not classified properly as it is a weak classifier and to be fair, we knew it won't perform well."
    ]
   },
   {
